# shiba

./: .stylish-haskell.yaml  Makefile  README.md  default.nix  haskell.nix  lambda.nix  shell.nix  shiba.cabal
.github/workflows/: test.yml
app/: Main.hs
nix/: stylish-haskell.nix
scripts/: docker-compose.yml  environment  invoke  query
src/: Config.hs  DynamoDB.hs  Main.hs  Notify.hs  SNS.hs  Scrape.hs  Scraper.hs
src/Scraper/: Shiba.hs
systest/: Main.hs
systest/SysTest/: DynamoDBSpec.hs
tf/: .terraform.lock.hcl  main.tf
