cabal-version: 2.2
name:          shiba
version:       0.0.1
license:       MIT
author:        Jente Hidskes
maintainer:    dev@hjdskes.nl
build-type:    Simple

common shared-properties
  default-language: Haskell2010
  build-depends:
    , base
  ghc-options:
    -Wall
    -Werror
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards

library
  import:         shared-properties
  hs-source-dirs: src
  exposed-modules:
    Config
    Scraper
  other-modules:
    DynamoDB
    Notify
    Scrape
  build-depends:
    , aeson
    , amazonka
    , amazonka-dynamodb
    , amazonka-sns
    , aws-lambda-haskell-runtime
    , exceptions
    , lens
    , mtl
    , resourcet
    , scalpel
    , tagsoup
    , text
    , unordered-containers

executable shiba-scraper
  import:         shared-properties
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aws-lambda-haskell-runtime
    , shiba