cabal-version: 2.2
name:          shiba
version:       0.0.1
license:       MIT
author:        Jente Hidskes
maintainer:    dev@hjdskes.nl
build-type:    Simple

common shared-properties
  default-language: Haskell2010
  build-depends:
    , base
  ghc-options:
    -Wall
    -Werror
  default-extensions:
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    RecordWildCards

library
  import:         shared-properties
  hs-source-dirs: src
  exposed-modules:
    Config
    DynamoDB
    Scraper
  other-modules:
    SNS
    Scrape
  build-depends:
    , aeson
    , amazonka
    , amazonka-dynamodb
    , amazonka-sns
    , aws-lambda-haskell-runtime
    , either
    , exceptions
    , lens
    , mtl
    , resourcet
    , scalpel
    , tagsoup
    , text
    , unordered-containers

executable shiba-scraper
  import:         shared-properties
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aws-lambda-haskell-runtime
    , shiba

test-suite shiba-systest
  import:         shared-properties
  hs-source-dirs: systest
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  default-extensions:
    TemplateHaskell
  other-modules:
    SysTest.DynamoDBSpec
    -- SysTest.ScrapeSpec
    -- SysTest.SNSSpec
  build-depends:
    , amazonka
    , amazonka-core
    , amazonka-dynamodb
    , amazonka-sns
    , exceptions
    , hedgehog
    , lens
    , resourcet
    , shiba
    , text
